@@ -7,7 +7,6 @@
 package de.uib.configed.core.domain.serverdata.dataservice;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -82,9 +81,22 @@ public class UserRolesConfigDataService extends DataService {
 				.equals(dataServices.cacheManager.getCachedData(CacheIdentifier.SERVER_FULL_PERMISION, Boolean.class));
 	}
 
-	public boolean hasCreateClientPermissionPD() {
-		return Boolean.TRUE.equals(
-				dataServices.cacheManager.getCachedData(CacheIdentifier.CREATE_CLIENT_PERMISSION, Boolean.class));
+	public boolean canCreateClients() {
+		return !isGlobalReadOnly()
+				&& Boolean.TRUE.equals(dataServices.cacheManager.getCachedData(CacheIdentifier.CREATE_CLIENT_PERMISSION,
+						Boolean.class))
+				&& !dataServices.config.getDisabledClientMenuEntries()
+						.contains(UserRolesConfigDataService.ITEM_ADD_CLIENT);
+	}
+
+	public boolean canFreeLicenses() {
+		return !isGlobalReadOnly() && !dataServices.config.getDisabledClientMenuEntries()
+				.contains(UserRolesConfigDataService.ITEM_FREE_LICENSES);
+	}
+
+	public boolean canDeleteClients() {
+		return !isGlobalReadOnly() && !dataServices.config.getDisabledClientMenuEntries()
+				.contains(UserRolesConfigDataService.ITEM_DELETE_CLIENT);
 	}
 
 	public boolean hasDepotsFullPermissionPD() {
@@ -203,13 +215,11 @@ public class UserRolesConfigDataService extends DataService {
 
 		if (dataServices.config.getConfigDefaultValuesPD()
 				.get(OpsiServiceNOMPersistenceController.KEY_USER_REGISTER) == null || setUserRegisterVal) {
-			List<Object> readyObjects = new ArrayList<>();
 			Map<String, Object> item = ConfigUtils.createNOMBoolConfig(
 					OpsiServiceNOMPersistenceController.KEY_USER_REGISTER, keyUserRegisterValue,
 					"without given values the primary value setting is false");
-			readyObjects.add(item);
 
-			dataServices.exec.doCall(RPCMethodName.CONFIG_UPDATE_OBJECTS, readyObjects);
+			dataServices.exec.doCall(RPCMethodName.CONFIG_UPDATE_OBJECTS, List.of(item));
 		}
 
 		new UserConfigProducing(applyUserSpecializedConfigPD(), dataServices.hostInfoCollections.getConfigServer(),
@@ -402,7 +412,7 @@ public class UserRolesConfigDataService extends DataService {
 			List<Object> forbiddenItems = serverPropertyMap.get(configKey);
 			dataServices.cacheManager.setCachedData(CacheIdentifier.TERMINAL_FORBIDDEN, forbiddenItems);
 		} else {
-			dataServices.cacheManager.setCachedData(CacheIdentifier.TERMINAL_FORBIDDEN, Collections.emptyList());
+			dataServices.cacheManager.setCachedData(CacheIdentifier.TERMINAL_FORBIDDEN, List.of());
 		}
 	}
 
@@ -604,11 +614,9 @@ public class UserRolesConfigDataService extends DataService {
 
 		Map<String, Object> item = ConfigUtils.createNOMitem("UnicodeConfig");
 
-		List<Object> defaultValues = new ArrayList<>();
-		defaultValues.add(dataServices.config.getOpsiDefaultDomainPD());
+		List<Object> defaultValues = List.of(dataServices.config.getOpsiDefaultDomainPD());
 
-		List<Object> possibleValues = new ArrayList<>();
-		possibleValues.add(dataServices.config.getOpsiDefaultDomainPD());
+		List<Object> possibleValues = List.of(dataServices.config.getOpsiDefaultDomainPD());
 
 		item.put("ident", OpsiServiceNOMPersistenceController.CONFIGED_GIVEN_DOMAINS_KEY);
 		item.put("description", "saved domains for creating clients");
@@ -627,15 +635,10 @@ public class UserRolesConfigDataService extends DataService {
 		Logging.warning(this, "checkStandardConfigs:  since no values found setting values for  ",
 				OpsiServiceNOMPersistenceController.KEY_HOST_EXTRA_DISPLAYFIELDS_IN_PANEL_LICENSES_RECONCILIATION);
 		// key not yet configured
-		List<Object> defaultValues = new ArrayList<>();
+		List<Object> defaultValues = List.of();
 		// example for standard configuration other than empty
 		// extra columns for license management, page licenses reconciliation
-		List<Object> possibleValues = new ArrayList<>();
-		possibleValues.add("description");
-		possibleValues.add("inventoryNumber");
-		possibleValues.add("notes");
-		possibleValues.add("ipAddress");
-		possibleValues.add("lastSeen");
+		List<Object> possibleValues = List.of("description", "inventoryNumber", "notes", "ipAddress", "lastSeen");
 
 		// create config for service
 		Map<String, Object> item = ConfigUtils.createNOMitem("UnicodeConfig");
@@ -658,12 +661,9 @@ public class UserRolesConfigDataService extends DataService {
 		Logging.warning(this, "checkStandardConfigs:  since no values found setting values for  ",
 				ConfigDataService.KEY_DISABLED_CLIENT_ACTIONS);
 		// key not yet configured
-		List<Object> defaultValues = Collections.emptyList();
+		List<Object> defaultValues = List.of();
 
-		List<Object> possibleValues = new ArrayList<>();
-		possibleValues.add(ITEM_ADD_CLIENT);
-		possibleValues.add(ITEM_DELETE_CLIENT);
-		possibleValues.add(ITEM_FREE_LICENSES);
+		List<Object> possibleValues = List.of(ITEM_ADD_CLIENT, ITEM_DELETE_CLIENT, ITEM_FREE_LICENSES);
 
 		Map<String, Object> item = ConfigUtils.createNOMitem("UnicodeConfig");
 		item.put("id", ConfigDataService.KEY_DISABLED_CLIENT_ACTIONS);
@@ -683,13 +683,10 @@ public class UserRolesConfigDataService extends DataService {
 		Logging.warning(this, "checkStandardConfigs:  since no values found setting values for  ",
 				ConfigDataService.KEY_OPSICLIENTD_EXTRA_EVENTS);
 		// key not yet configured
-		List<Object> defaultValues = Collections
-				.singletonList(OpsiServiceNOMPersistenceController.OPSI_CLIENTD_EVENT_ON_DEMAND);
+		List<Object> defaultValues = List.of();
 
-		List<Object> possibleValues = new ArrayList<>();
-
-		possibleValues.add(OpsiServiceNOMPersistenceController.OPSI_CLIENTD_EVENT_ON_DEMAND);
-		possibleValues.add(OPSI_CLIENTD_EVENT_SILENT_INSTALL);
+		List<Object> possibleValues = List.of(OpsiServiceNOMPersistenceController.OPSI_CLIENTD_EVENT_ON_DEMAND,
+				OPSI_CLIENTD_EVENT_SILENT_INSTALL);
 
 		Map<String, Object> item = ConfigUtils.createNOMitem("UnicodeConfig");
 		item.put("id", ConfigDataService.KEY_OPSICLIENTD_EXTRA_EVENTS);
